--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,3 +4,7 @@ body{
     font-family: 'YouTube Sans', 'Montserrat';;
     font-family: 'YouTube Sans Dark', 'Montserrat';
 }
+html,body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
